--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
             <artifactId>spring-context</artifactId>
             <version>5.0.9.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+
+        <!--Validators -->
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>javax.el</artifactId>
